# hybrid-recsys

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PROJECT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.ps1
.github/workflows/: pytest.yml
app/: app.py
artifacts/: README.md
backend/: __init__.py  main.py  schemas.py  serving.py
data/: README.md
docs/: README.md  app.md  backend.md  evaluation.md  hybrid-recommender-system-plan.md  models.md  notebooks.md  project-walkthrough.md
hybrid_recsys/: __init__.py  config.py
hybrid_recsys/evaluation/: __init__.py
hybrid_recsys/models/: collaborative.py  content.py
hybrid_recsys/pipeline/: __init__.py  features.py  splits.py
notebooks/: 01_eda.ipynb  02_features.ipynb  03_baselines.ipynb  03_train.ipynb  03_train_evaluate.ipynb  04_evaluation.ipynb  08_weighted_hybrid.ipynb  09_stacked_hybrid.ipynb  10_comparison.ipynb  11_lightgcn.ipynb  12_dual_head_hybrid.ipynb  14_advanced_eval.ipynb  15_case_study.ipynb  16_evaluation_report.ipynb  README.md  generate.py
src/app/: app.py
src/hybrid_recsys/: config.py  serving.py
src/hybrid_recsys/evaluation/: metrics.py  report.py
src/hybrid_recsys/models/: __init__.py  collaborative.py  content.py  hybrid.py  lightgcn.py
src/hybrid_recsys/pipeline/: data.py  features.py
tests/: test_metrics.py  test_splits.py
