[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-recsys"
version = "0.1.0"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["hybrid_recsys*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
